# ldjam52

./: .editorconfig  Cargo.toml
assets/: ldjam52.tiled-session  map.tmx
assets/entities/: fireplace.yaml
assets/entity_types/: player.yaml
assets/ldtk/: ldjam52.ldtk
assets/maps/: bedroom.tmj  bedroom.tmx
assets/tiled/: ldjam52.tiled-session
assets/tilesets/: village_interiors.tsx  village_pack.tsx
src/: helpers.rs  main.rs  tiled.rs
src/components/: animation.rs  interaction.rs  mod.rs  player.rs
src/data/: common.rs  entity_types.rs  mod.rs
src/plugins/: menu.rs  mod.rs  tiled.rs
src/systems/: animation.rs  camera.rs  input.rs  interaction.rs  mod.rs  player.rs  textures.rs
