[package]
name = "ldjam52"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bevy = { version = "0.9.1", features = ["dynamic"] }
log = "0.4.17"
#tiled = "0.10.1"
tiled = { git = "https://github.com/mapeditor/rs-tiled", commit = "763e0223ce5e97dff464a8bac346996c6835046d" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
